Fix:CRU-4037-reminder-email-confirmation-page-distorted (#675)

--- a/client/components/My/PatientPage/ConfirmedAppointment/styles.scss
+++ b/client/components/My/PatientPage/ConfirmedAppointment/styles.scss
@@ -4,6 +4,7 @@
   color: $primary-dark;
   composes: header from '../../../../styles/fonts.scss';
   text-align: center;
+  margin-top: 60px;
 }
 
 .text {
